Correct Z-index of Header, Fine Tune Animation.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -88,7 +88,7 @@ outer-container {
 
 header {
   display: flex;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
@@ -127,8 +127,7 @@ header {
     text-align: left; }
   header nav {
     flex: auto;
-    max-width: 440px;
-    text-align: center; }
+    text-align: right; }
     header nav button {
       font-size: 1rem;
       letter-spacing: 0.12em;
@@ -151,7 +150,7 @@ intro-text {
   line-height: 1.5em; }
   intro-text p {
     position: relative;
-    top: 40%;
+    top: 50%;
     transform: translateY(-50%);
     color: #f0f0f0;
     font-weight: lighter; }
@@ -163,7 +162,8 @@ intro-text {
   text-align: center; }
 
 main {
-  background-color: #f0f0f0;
+  position: relative;
+  z-index: 1;
   color: #141414;
   flex-wrap: wrap; }
   main section {
@@ -205,9 +205,13 @@ footer {
     justify-content: center; }
     header .gutter {
       display: none; }
+    header nav {
+      text-align: center; }
   intro-text {
     font-size: 2rem; } }
 
-@media only screen and (min-width: 647px) and (max-width: 736px) {
+@media only screen and (min-width: 647px) and (max-width: 768px) {
   header {
-    padding: 0.8em; } }
+    padding: 0.8em; }
+  intro-text {
+    font-size: 2rem; } }
